added delete option and saved the data on local storage

--- a/Style.css
+++ b/Style.css
@@ -59,3 +59,8 @@
     text-decoration: line-through;
     color: gray;
 }
+#taskList li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
